# gfs-utils

./: .gitignore  CMakeLists.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: linters.yaml  pynorms.yaml
cmake/: Findgempak.cmake  Findgfortran.cmake
fix/nc2grb/: template.global.0p25.gb2
modulefiles/: gfsutils_common.lua  gfsutils_gaea.intel.lua  gfsutils_hera.intel.lua  gfsutils_hera.lua  gfsutils_hercules.intel.lua  gfsutils_hercules.lua  gfsutils_jet.intel.lua  gfsutils_jet.lua  gfsutils_noaacloud.intel.lua  gfsutils_orion.intel.lua  gfsutils_orion.lua  gfsutils_s4.intel.lua  gfsutils_s4.lua  gfsutils_wcoss2.intel.lua  gfsutils_wcoss2.lua  rdbfmsua_hera.intel.lua  rdbfmsua_orion.intel.lua  rdbfmsua_wcoss2.intel.lua  workflow_utils.hera.lua  workflow_utils.orion.lua  workflow_utils.wcoss2.lua
parm/ocnicepost/: ice.csv  ice_mx025_to_0p25.nml  ocean.csv  ocean_mx025_to_0p25.nml  ocnicepost.nml.jinja2
sorc/: CMakeLists.txt
sorc/overgridid.fd/: CMakeLists.txt
src/: CMakeLists.txt  build_gfs_utils.sh
src/cmake/: Findgempak.cmake
src/enkf_chgres_recenter.fd/: CMakeLists.txt
src/enkf_chgres_recenter_nc.fd/: CMakeLists.txt  interp.f90
src/ensadd.fd/: CMakeLists.txt
src/ensppf.fd/: CMakeLists.txt
src/ensstat.fd/: CMakeLists.txt
src/fbwndgfs.fd/: CMakeLists.txt  fbwndgfs.F  fbwndgfs.f
src/fv3nc2nemsio.fd/: CMakeLists.txt
src/gaussian_sfcanl.fd/: CMakeLists.txt  gaussian_sfcanl.f90
src/gefs_6h_ave_1mem.fd/: CMakeLists.txt  gefs_6h_ave_1mem.f90  prlevel.f90
src/gfs_bufr.fd/: CMakeLists.txt  CMakeLists.txt_org  buff.f  gfsbufr.f  meteorg.f  modpr_module.f90  modstuff1.f  read_netcdf.f
src/mkgfsawps.fd/: CMakeLists.txt  mkgfsawps.F  mkgfsawps.f
src/ocnicepost.fd/: CMakeLists.txt  arrays_mod.F90  init_mod.F90  masking_mod.F90  ocnicepost.F90  ocnicepost.nml  outputvars.F90  remapping_mod.F90  utils_mod.F90
src/overgridid.fd/: CMakeLists.txt
src/rdbfmsua.fd/: CMakeLists.txt  makefile  makefile.hera.intel  makefile.orion.intel  makefile.wcoss2.intel
src/rdbfmsua.fd/to_be_deleted/: makefile.hera  makefile.wcoss2
src/reg2grb2.fd/: CMakeLists.txt
src/regrid_nemsio.fd/: CMakeLists.txt
src/supvit.fd/: CMakeLists.txt
src/syndat_getjtbul.fd/: CMakeLists.txt
src/syndat_maksynrc.fd/: CMakeLists.txt
src/syndat_qctropcy.fd/: CMakeLists.txt
src/tave.fd/: CMakeLists.txt
src/tocsbufr.fd/: CMakeLists.txt
src/vint.fd/: CMakeLists.txt
src/wave_stat.fd/: CMakeLists.txt
src/webtitle.fd/: CMakeLists.txt
ush/: CMakeLists.txt  build.sh  detect_machine.sh  finddate.sh  machine-setup.sh  make_ntc_bull.pl  module-setup.sh  test_finddate.sh
ush/nc2grb/: nc2grb.ice.sh  nc2grb.ocean_2D.sh  nc2grb.ocean_3D.sh
