add_subdirectory(enkf_chgres_recenter_nc.fd)
add_subdirectory(gaussian_sfcanl.fd)
add_subdirectory(gfs_bufr.fd)
add_subdirectory(reg2grb2.fd)
add_subdirectory(tocsbufr.fd)
add_subdirectory(fbwndgfs.fd)
add_subdirectory(vint.fd)
add_subdirectory(tave.fd)
add_subdirectory(syndat_qctropcy.fd)
add_subdirectory(syndat_maksynrc.fd)
add_subdirectory(syndat_getjtbul.fd)
add_subdirectory(supvit.fd)

add_subdirectory(mkgfsawps.fd)
add_subdirectory(overgridid.fd)
# add_subdirectory(rdbfmsua.fd)
add_subdirectory(webtitle.fd)

add_subdirectory(ocnicepost.fd)
