add_subdirectory(enkf_chgres_recenter_nc.fd)
add_subdirectory(gaussian_sfcanl.fd)
add_subdirectory(gfs_bufr.fd)
add_subdirectory(reg2grb2.fd)
add_subdirectory(tocsbufr.fd)
add_subdirectory(fbwndgfs.fd)
add_subdirectory(vint.fd)
add_subdirectory(tave.fd)
add_subdirectory(syndat_qctropcy.fd)
add_subdirectory(syndat_maksynrc.fd)
add_subdirectory(syndat_getjtbul.fd)
add_subdirectory(supvit.fd)

add_subdirectory(mkgfsawps.fd)
add_subdirectory(overgridid.fd)
if (gempak_FOUND AND gfortran_FOUND)
  add_subdirectory(rdbfmsua.fd)
else()
  if(NOT gempak_FOUND)
    message(WARNING "GEMPAK not found, skipping rdbfmsua.fd")
  endif()
  if(NOT gfortran_FOUND)
    message(WARNING "gfortran not found, skipping rdbfmsua.fd")
  endif()
endif()
add_subdirectory(webtitle.fd)

add_subdirectory(ocnicepost.fd)

add_subdirectory(ensadd.fd)
add_subdirectory(ensppf.fd)
add_subdirectory(ensstat.fd)
add_subdirectory(wave_stat.fd)
